fix spacing and get rocket and teams section done

--- a/src/main/resources/public/nttsite.css
+++ b/src/main/resources/public/nttsite.css
@@ -6,6 +6,7 @@ html, body {
 .spacing {
     padding-left: 12%;
     padding-right: 12%;
+    overflow: auto;
 }
 
 .links {
@@ -49,12 +50,12 @@ html, body {
 }
 
 .left-content {
-    width: 45%;
+    width: 55%;
     float: left;
 }
 
 .right-content {
-    width: 45%;
+    width: 35%;
     float: left;
 }
 
@@ -62,7 +63,7 @@ html, body {
     font-size: 14px;
 }
 
-input {
+.input {
     border: 0;
     outline: 0;
     background: transparent;
@@ -76,7 +77,7 @@ input {
 
 .left-button {
     cursor: pointer;
-    width: 80%;
+    width: 83%;
     background: #000B28 0% 0% no-repeat padding-box;
 }
 
@@ -89,13 +90,13 @@ input {
 
 .right-button {
     cursor: pointer;
-    width: 13%;
+    width: 15%;
     background: #000B28 0% 0% no-repeat padding-box;
 }
 
 .textarea {
     margin-top: 20px;
-    width: 94%;
+    width: 99%;
     font-size: 10px;
 }
 
@@ -107,6 +108,12 @@ input {
 .rectangle{
     background: #F3F3F3 0% 0% no-repeat padding-box;
     border-radius: 3px;
+    margin-top: 15px;
+    padding: 5px 10px 10px 10px;
+}
+
+.entered-urls {
+    width: 90%;
 }
 
 /*
